# Bullshark-Battlegrounds

./: .env  .gitignore  README.md  build.sh  build_test.sh  nfts.json  package-lock.json  package.json  sui.log.2023-08-11  sui.log.2023-09-09
backen/: Cargo.toml
backen/src/: lib.rs  main.rs
backend/: Cargo.toml  index.js  package-lock.json  package.json
backend/src/: lib.rs  main.rs
card_game/: .coverage_map.mvcov  .trace  Move.toml  sui.log.2023-08-11  sui.log.2023-08-12  sui.log.2023-08-13  sui.log.2023-08-14  sui.log.2023-08-16  sui.log.2023-08-17  sui.log.2023-08-21  sui.log.2023-08-23  sui.log.2023-08-24  sui.log.2023-08-26  sui.log.2023-08-27  sui.log.2023-08-28  sui.log.2023-08-29  sui.log.2023-08-31  sui.log.2023-09-02  sui.log.2023-09-05  sui.log.2023-09-07  sui.log.2023-09-09  sui.log.2023-09-10  sui.log.2023-09-11  sui.log.2023-09-16
card_game/sources/: card_game.move  card_game_integration_test.move  card_gamev2.move
circuits/: package.json  pot12_0001.ptau  zkCardGame.circom  zkCardGame_0000.zkey  zkCardGame_0001.zkey
circuits/discard/: discard.circom
circuits/draw/: draw.circom  draw.r1cs  draw.sym  draw_0000.zkey  draw_0001.zkey  pot12_0001.ptau
circuits/main_test/: main.zkey  pot12_0001.ptau
circuits/play/: play.circom  play.r1cs  play.sym  (+2 more)
ffi_test/: Cargo.toml
frontend/: .env  .env.example  move_calls.ts  package-lock.json  package.json  tailwind.config.js
generate-nft/: index.js  package-lock.json  package.json
rust-backend/: Cargo.toml
scripts/: index.js  package-lock.json  package.json
zk-test/: Cargo.toml
(+35 files in other folders)
