[package]
name = "backen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rocket = "0.5.0-rc.1"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-serialize = "0.4.0"
ark-circom = "0.1.0"
rand = "0.8.4"
fastcrypto = "0.1.5"
