[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
rand = {version = "0.8.5", features = ["js"]}
ark-snark = "0.4.0"
ark-serialize = "0.4.0"
ark-circom = "0.1.0"
wasm-bindgen = "0.2.78"